# simGL

./: .gitignore  .readthedocs.yaml  ACTION_PLAN.md  CITATION.cff  LICENSE  README.ipynb  README.md  environment.yml  minutes.md  requirements.txt  setup.cfg  simGL.ipynb  simGL.py
.github/workflows/: tests.yaml
.ipynb_checkpoints/: simGL-checkpoint.ipynb
docs/: changelog.rst  citation.rst  conf.py  index.rst  installation.rst  quickstart.rst  theory.rst  userguide.rst
notebook/: README.ipynb  simGL.ipynb
requirements/: docs.txt  minimal.txt  test.txt
simGL/: __init__.py  simGL.py
tests/: conftest.py  test_GL_to_Mm.py  test_GL_to_vcf.py  test_allelereadcounts_to_GL.py  test_allelereadcounts_to_pileup.py  test_incorporate_monomorphic.py  test_normalize_GL.py  test_ref_alt_to_index.py  test_simGL.py  test_sim_allelereadcounts.py  test_subset_GL.py
