[metadata]
name = simGL
version = 0.1
author = Moisès Coll Macià, Graham Gower
license = ISC
description = Simulate genotype likelihoods from haplotype genotype matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RacimoLab/simGL
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/RacimoLab/simGL/issues
    Source Code = https://github.com/RacimoLab/simGL
    Documentation = https://github.com/RacimoLab/simGL


[options]
packages = simGL
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.22
    scipy
setup_requires =
    setuptools
    setuptools_scm